--- a/areamedica.html
+++ b/areamedica.html
@@ -4,8 +4,8 @@
 	<title>Area Medica - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
+	<meta name="description" content="Prestazioni specialistiche offerte dal dott. Paolo Bari" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area, medica,terapie,audiologia,rinologia,endoscopia,vertigini,prestazioni,visite,specilistiche,visite specialistiche,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
@@ -52,10 +52,10 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="#audiologia">Audiologia</a></li>
-						<li><a href="#rinologia">Rinologia</a></li>
-						<li><a href="#endoscopia">Endoscopia</a></li>
-						<li><a href="#vertigini">Vertigini</a></li>
+						<li><a href="./areamedica/audiologia.html">Audiologia</a></li>
+						<li><a href="./areamedica/rinologia.html">Rinologia</a></li>
+						<li><a href="./areamedica/endoscopia.html">Endoscopia</a></li>
+						<li><a href="./areamedica/vertigini.html">Vertigini</a></li>
 					</ul>
 				</div>
 
