--- a/areamedica/audiologia.html
+++ b/areamedica/audiologia.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Area Medica - Dott. Paolo Bari</title>
+	<title>Audiologia - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
+	<meta name="description" content="Area di audiologia" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area,medica,terapie,audiologia,prestazioni,visite,specilistiche,visite specialistiche,audiologia, audiometria,impedenzometria,otomicroscopia,ABR" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="../images/icon.svg" />
@@ -36,8 +36,7 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Area Medica</h1>
-						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
+						<h1 class="hero__title">Audiologia</h1>
 					</div>
 				</div>
 			</div>
@@ -51,75 +50,71 @@
 			<div class="page__inner">
 				<div class="page__menu">
 					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="#audiologia">Audiologia</a></li>
-						<li><a href="#rinologia">Rinologia</a></li>
-						<li><a href="#endoscopia">Endoscopia</a></li>
-						<li><a href="#vertigini">Vertigini</a></li>
+						<li><a href="#" class="vMenu--active">Audiologia</a></li>
+						<li><a href="#audiometria">Audiometria</a></li>
+						<li><a href="#impedenzometria">Impedenzometria</a></li>
+						<li><a href="#otomicroscopia">Otomicroscopia</a></li>
+						<li><a href="#ABR">ABR</a></li>
 					</ul>
 				</div>
 
 				<!--Main content -->
 				<div class="page__main">
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="audiologia">
+					<div class="expanded landing__section__medicine" id="audiometria">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Audiologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Audiometria</h2>
+									<p class="expanded__text">Esame eseguito in cabina silente, permette di eseguire indagini sulla funzione uditiva.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
+									<img src="../images/audiometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+					<div class="expanded landing__section__medicine__inverse" id="impedenzometria">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Rinologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Impedenzometria</h2>
+									<p class="expanded__text">Vengono eseguiti il Timpanogramma (per lo studio delle forme catarrali dell’orecchio medio) e la ricerca dei Riflessi cocleo – stapediali, sia in ipsi che in contralaterale; può essere utilizzata come test di funzionalità tubarica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/a.jpeg" class="expanded__image">
+									<img src="../images/impedenzometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="endoscopia">
+					<div class="expanded landing__section__medicine" id="otomicroscopia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Endoscopia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Otomicroscopia</h2>
+									<p class="expanded__text">La microscopia permette una diagnosi accurata delle patologie dell’orecchio esterno e medio e offre inoltre la possibilità di curare mediante toilette o medicazioni mirate infezioni auricolari quali micosi o forme purulente.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/c.png" class="expanded__image">
+									<img src="../images/otomicroscopia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="vertigini">
+					<div class="expanded landing__section__medicine__inverse" id="ABR">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Vertigini</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">ABR</h2>
+									<p class="expanded__text">Sofisticata tecnica di audiometria obiettiva per lo studio delle ipoacusie neurosensoriali che permette una valutazione completa del nervo uditivo dalla coclea ai centri corticali; è un esame non invasivo o doloroso, può essere eseguito anche nell’infanzia, specialmente nella necessità di determinare la soglia uditiva del bambino.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/5.jpeg" class="expanded__image">
+									<img src="../images/abr.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
