--- a/areamedica/endoscopia.html
+++ b/areamedica/endoscopia.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Area Medica - Dott. Paolo Bari</title>
+	<title>Endoscopia - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
+	<meta name="description" content="Area di endoscopia" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area,medica,terapie,audiologia,prestazioni,visite,specilistiche,visite specialistiche,endoscopia,fibroscopia,endoscopia nasale-laringea,otoscopia" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="../images/icon.svg" />
@@ -36,8 +36,7 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Area Medica</h1>
-						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
+						<h1 class="hero__title">Endoscopia</h1>
 					</div>
 				</div>
 			</div>
@@ -51,24 +50,22 @@
 			<div class="page__inner">
 				<div class="page__menu">
 					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="#audiologia">Audiologia</a></li>
-						<li><a href="#rinologia">Rinologia</a></li>
-						<li><a href="#endoscopia">Endoscopia</a></li>
-						<li><a href="#vertigini">Vertigini</a></li>
+						<li><a href="#" class="vMenu--active">Endoscopia</a></li>
+						<li><a href="#fibroscopia">Fibroscopia</a></li>
+						<li><a href="#endoscopia__nasale">Endoscopia nasale - laringea</a></li>
+						<li><a href="#otoscopia">Otoscopia</a></li>
 					</ul>
 				</div>
 
 				<!--Main content -->
 				<div class="page__main">
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="audiologia">
+					<div class="expanded landing__section__medicine" id="fibroscopia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Audiologia</h2>
+									<h2 class="expanded__title">Fibroscopia</h2>
 									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
 									<img src="../images/b.jpeg" class="expanded__image">
@@ -78,54 +75,35 @@
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+					<div class="expanded landing__section__medicine__inverse" id="endoscopia__nasale">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Rinologia</h2>
+									<h2 class="expanded__title">Endoscopia nasale - laringea</h2>
 									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/a.jpeg" class="expanded__image">
+									<img src="../images/b.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="endoscopia">
+					<div class="expanded landing__section__medicine" id="otoscopia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Endoscopia</h2>
+									<h2 class="expanded__title">Otoscopia</h2>
 									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/c.png" class="expanded__image">
+									<img src="../images/b.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
-					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="vertigini">
-						<div class="container">
-							<div class="expanded__inner">
-								<div class="expanded__content">
-									<h2 class="expanded__title">Vertigini</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
-								</div>
-								<div class="expanded__media">
-									<img src="../images/5.jpeg" class="expanded__image">
-								</div>
-							</div>
-						</div>
-					</div>
-					<!--Fine terapia -->
-
 				</div>
 			</div>
 		</div>
