--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Area Medica - Dott. Paolo Bari</title>
+	<title>Rinologia - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
-    <meta name="author" content="Francesco Bari" />
+	<meta name="description" content="Area di rinologia" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area,medica,terapie,audiologia,prestazioni,visite,specilistiche,visite specialistiche,rinologia,esami endoscopici,rinometria,rinomanometria acustica,citologia nasale" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="../images/icon.svg" />
 </head>
@@ -36,8 +35,7 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Area Medica</h1>
-						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
+						<h1 class="hero__title">Rinologia</h1>
 					</div>
 				</div>
 			</div>
@@ -51,81 +49,60 @@
 			<div class="page__inner">
 				<div class="page__menu">
 					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="#audiologia">Audiologia</a></li>
-						<li><a href="#rinologia">Rinologia</a></li>
-						<li><a href="#endoscopia">Endoscopia</a></li>
-						<li><a href="#vertigini">Vertigini</a></li>
+						<li><a href="#" class="vMenu--active">Rinologia</a></li>
+						<li><a href="#esami__endoscopici">Esami endoscopici</a></li>
+						<li><a href="#rinometria">Rinometria e rinomanometria acustica</a></li>
+						<li><a href="#citologia__nasale">Citologia nasale</a></li>
 					</ul>
 				</div>
 
 				<!--Main content -->
 				<div class="page__main">
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="audiologia">
+					<div class="expanded landing__section__medicine" id="esami__endoscopici">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Audiologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Esami endoscopici</h2>
+									<p class="expanded__text">Mediante uso di telecamere digitalizzate vengono indagate l’anatomia delle prime vie aeree (fosse nasali, faringe e laringe) e dell’orecchio; si possono usare ottiche flessibili (fibroscopia) o ottiche rigide; sono esami assolutamente non dolorosi, di norma non viene usata anestesia; le immagini vengono salvate su video – cd o su carta fotografica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
+									<img src="../images/esami_endoscopici.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+					<div class="expanded landing__section__medicine__inverse" id="rinometria">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Rinologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Rinometria e rinomanometria acustica</h2>
+									<p class="expanded__text">Sono esami fra loro complementari che permettono lo studio obiettivo della funzionalità respiratoria nasale senza nessun tipo di disturbo per il paziente; sono usate principalmente in previsione di interventi di Settoplastica o Turbinoplastica inferiore o come test per la roncopatia cronica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/a.jpeg" class="expanded__image">
+									<img src="../images/rinometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="endoscopia">
+					<div class="expanded landing__section__medicine" id="citologia__nasale">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Endoscopia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Citologia nasale</h2>
+									<p class="expanded__text">Una semplice tecnica diagnostica che però viene eseguita di routine in pochi centri italiani; permette una diagnosi accurata delle patologie nasali, allergiche e non, mediante lo studio della cellularità nasale; non è una metodica dolorosa e non necessita di anestesia.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/c.png" class="expanded__image">
+									<img src="../images/citologia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
-					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="vertigini">
-						<div class="container">
-							<div class="expanded__inner">
-								<div class="expanded__content">
-									<h2 class="expanded__title">Vertigini</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
-								</div>
-								<div class="expanded__media">
-									<img src="../images/5.jpeg" class="expanded__image">
-								</div>
-							</div>
-						</div>
-					</div>
-					<!--Fine terapia -->
-
 				</div>
 			</div>
 		</div>
