--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Contatti - Dott. Paolo Bari</title>
+	<title>Blog - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Contatta il dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,contatti,numero, dove lavora, studio" />
+	<meta name="description" content="Notizie e aggiornamenti dal dott. Paolo Bari" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,blog,notizie,news,aggiornamenti,trasmissioni,tv,radio,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
@@ -19,10 +19,10 @@
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Contatti</a></li>
+						<li><a href="contatti.html">Contatti</a></li>
 						<li><a href="dottore.html">Dottore</a></li>
 						<li><a href="areamedica.html">Area Medica</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<li><a href="#">Blog</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -36,8 +36,7 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Contatti</h1>
-						<p class="hero__text">Potete contattare direttamente gli studi medici dove lavoro, qui troverete tutte le informazioni per contattarli.</p>
+						<h1 class="hero__title">Blog</h1>
 					</div>
 				</div>
 			</div>
@@ -49,9 +48,9 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Audiologia</h2>
-						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+					<h2 class="expanded__title">Notizia 1</h2>
+						<p class="expanded__text">Testo della notizia 1, lorem ipsum dolores sic est nestian docet amor che nullla amato amar perdona</p>
+						<a href="https://www.youtube.com/watch?v=mOkMOk_re-A" class="button button__accent">Scopri di pi&#249;</a>
 				</div>
 				<div class="expanded__media">
 				<img src="./images/b.jpeg" class="expanded__image">
@@ -63,12 +62,9 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Audiologia</h2>
-						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+					<h2 class="expanded__title">Notizia 2 (senza foto)</h2>
+						<p class="expanded__text">Lo studio di questa o quella parte del corpo Testo della notizia 1, lorem ipsum dolores sic est nestian docet amor che nullla amato amar perdona Testo della notizia 1, lorem ipsum dolores sic est nestian docet amor che nullla amato amar perdona Testo della notizia 1, lorem ipsum dolores</p>
 						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
-				</div>
-				<div class="expanded__media">
-				<img src="./images/b.jpeg" class="expanded__image">
 				</div>
 			</div>
 		</div>
