--- a/dottore.html
+++ b/dottore.html
@@ -4,8 +4,8 @@
 	<title>Dottore - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Anagrafica del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, anagrafica, chi siamo" />
+	<meta name="description" content="Anagrafica del dott. Paolo Bari" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,anagrafica,chi siamo,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
