--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
 </head>
 
 <body>
+	<!-- Navbar -->
 	<div class="navbar navbar--extended">
 		<nav class="nav__mobile"></nav>
 		<div class="container">
@@ -30,7 +31,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Hero unit -->
+	<!-- Header landing page -->
 	<div class="hero">
 		<div class="hero__overlay hero__overlay--gradient"></div>
 		<div class="hero__inner">
@@ -46,12 +47,13 @@
 			</div>
 		</div>
 	</div>
+	<!-- Autoscroll row -->
 	<div class="hero__sub">
 		<span id="scrollToNext" class="scroll">
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
 		</span>
 	</div>
-	<!-- Steps -->
+	<!-- Section 1 -->
 	<div class="steps landing__section">
 		<div class="container">
 			<h2>Dove lavoro?</h2>
@@ -86,7 +88,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Expanded sections -->
+	<!-- Section 2 -->
 	<div class="expanded landing__section">
 		<div class="container">
 			<div class="expanded__inner">
@@ -96,11 +98,12 @@
 				<div class="expanded__content">
 					<h2 class="expanded__title">Dott. Paolo Bari</h2>
 					<p class="expanded__text">Il Dott. Paolo Bari è il responsabile dello studio di Otorinolaringoiatria; si è laureato in Medicina e Chirurgia presso l’Università degli Studi di Verona nel Marzo 1987.  Nel 1990 si è diplomato specialista in Otorinolaringoiatria sempre presso l’Università di Verona.  Dal ’91 al ’97 ha lavorato presso l’Ospedale civile di Vicenza, reparto di Otorinolaringoiatria.  Dal 1997 al 2010 ha svolto il ruolo di responsabile del servizio ORL presso la Casa di cura Eretenia – Vicenza.
-Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.</p>
+					Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.</p>
 				</div>
 			</div>
 		</div>
 	</div>
+	<!-- Section 3 -->
 	<div class="expanded landing__section">
 		<div class="container">
 			<div class="expanded__inner">
@@ -115,6 +118,7 @@ Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio pri
 			</div>
 		</div>
 	</div>
+	<!-- Section 4 -->
 	<div class="expanded landing__section">
 		<div class="container">
 			<div class="expanded__inner">
@@ -130,7 +134,7 @@ Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio pri
 			</div>
 		</div>
 	</div>
-	<!-- Call To Action -->
+	<!-- Blue area -->
 	<div class="cta cta--reverse">
 		<div class="container">
 			<div class="cta__inner">
