--- a/areamedica/vertigini.html
+++ b/areamedica/vertigini.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Area Medica - Dott. Paolo Bari</title>
+	<title>Vertigini - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
+	<meta name="description" content="Area delle vertigini" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area,medica,terapie,audiologia,prestazioni,visite,specilistiche,visite specialistiche,vertigini,videonistagmografia,vemps,rieducazione vestibolare, rieducazione posturale, posturografia" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="../images/icon.svg" />
@@ -36,8 +36,7 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Area Medica</h1>
-						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
+						<h1 class="hero__title">Vertigini</h1>
 					</div>
 				</div>
 			</div>
@@ -51,75 +50,71 @@
 			<div class="page__inner">
 				<div class="page__menu">
 					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="#audiologia">Audiologia</a></li>
-						<li><a href="#rinologia">Rinologia</a></li>
-						<li><a href="#endoscopia">Endoscopia</a></li>
-						<li><a href="#vertigini">Vertigini</a></li>
+						<li><a href="#" class="vMenu--active">Vertigini</a></li>
+						<li><a href="#videonistagmografia">Videonistagmografia</a></li>
+						<li><a href="#vemps">VEMPs</a></li>
+						<li><a href="#rieducazione">Rieducazione vestibolare e posturale</a></li>
+						<li><a href="#posturografia">Posturografia</a></li>
 					</ul>
 				</div>
 
 				<!--Main content -->
 				<div class="page__main">
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="audiologia">
+					<div class="expanded landing__section__medicine" id="videonistagmografia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Audiologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Videonistagmografia</h2>
+									<p class="expanded__text">Un sistema diagnostico per lo studio delle vertigini, completo e obiettivo, con uso di telecamere oculari ad infrarossi; esame assolutamente non traumatico – possono essere eseguiti una decina di test per l’approfondimento di tali patologie; l’integrazione con la sedia elettronica rotatoria permette inoltre lo studio delle fisiologiche stimolazioni a cui quotidianamente il nostro sistema dell’equilibrio viene sottoposto; risulta anche di estrema utilità nella terapia riabilitativa di tali patologie.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
+									<img src="../images/videonistagmografia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+					<div class="expanded landing__section__medicine__inverse" id="vemps">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Rinologia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">VEMPs</h2>
+									<p class="expanded__text">VEMPs (Vestibular Evoked Myogenic Potentials): metodica che permette un importante approfondimento diagnostico nelle patologie vertiginose, non invasiva o dolorosa, può essere eseguita anche in età pediatrica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/a.jpeg" class="expanded__image">
+									<img src="../images/vemps.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="endoscopia">
+					<div class="expanded landing__section__medicine" id="rieducazione">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Endoscopia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Rieducazione vestibolare e posturale</h2>
+									<p class="expanded__text">Sotto controllo di personale specializzato e con l’ausilio di numerose attrezzature permette di curare gli esiti di patologie del vestibolo, periferiche e parzialmente anche centrali, e i disturbi dell’equilibri</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/c.png" class="expanded__image">
+									<img src="../images/rieducazione.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="vertigini">
+					<div class="expanded landing__section__medicine__inverse" id="posturografia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Vertigini</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+									<h2 class="expanded__title">Posturografia</h2>
+									<p class="expanded__text">Esame eseguito su pedana stabilometrica per lo studio dei disturbi dell’equilibrio legato a deficit posturali; nell’esame standard, mediante cinque test, vengono analizzate la capacità di controllo dell’equilibrio e la stabilità posturale del paziente soggetto in situazioni stabili o non stabili, attraverso interposizione di cuscino in gomma piuma, con e senza aiuto visivo; grazie alla metodica Visual Feedback risulta inoltre estremamente utile nella rieducazione vestibolare e posturale.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/5.jpeg" class="expanded__image">
+									<img src="../images/posturografia.png" class="expanded__image">
 								</div>
 							</div>
 						</div>
