--- a/contatti/vicenza.html
+++ b/contatti/vicenza.html
@@ -4,8 +4,8 @@
 	<title>Vicenza - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,contatti,numero, dove lavora, studio, studio vicenza" />
+	<meta name="description" content="Studio di Vicenza" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,contatti,numero,dove lavora,studio,studio vicenza,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
@@ -53,6 +53,6 @@
 			</div>
 		</div>
 	</div>
-<script src='js/app.js'></script>
+<script src='../js/app.js'></script>
 </body>
 </html>
